SLA Checker for right github id added

--- a/SLAChecker/Makefile
+++ b/SLAChecker/Makefile
@@ -5,6 +5,9 @@ all: $(BUILDDIR) $(BUILDDIR)/tester
 $(BUILDDIR):
 	mkdir -p $@
 
+$(BUILDDIR)/right_github: ./src/right_github.c $(BUILDDIR)
+	gcc -o$@ $<
+
 $(BUILDDIR)/tester: ./src/sla_tester.c $(BUILDDIR)
 	gcc -o$@ $<
 
