SLA Checker for wrong github id is added

--- a/SLAChecker/Makefile
+++ b/SLAChecker/Makefile
@@ -8,6 +8,9 @@ $(BUILDDIR):
 $(BUILDDIR)/right_github: ./src/right_github.c $(BUILDDIR)
 	gcc -o$@ $<
 
+$(BUILDDIR)/wrong_github: ./src/wrong_github.c $(BUILDDIR)
+	gcc -o$@ $<
+
 $(BUILDDIR)/tester: ./src/sla_tester.c $(BUILDDIR)
 	gcc -o$@ $<
 
