Stop implementing SLA Checker in C
gpgme가 32bit를 지원하지 않으므로, C 로 SLA check를 마저 구현하는 것은 무리라고 판단함

--- a/SLAChecker/Makefile
+++ b/SLAChecker/Makefile
@@ -11,6 +11,9 @@ $(BUILDDIR)/right_github: ./src/right_github.c $(BUILDDIR)
 $(BUILDDIR)/wrong_github: ./src/wrong_github.c $(BUILDDIR)
 	gcc -o$@ $<
 
+$(BUILDDIR)/handshake: ./src/handshake.c $(BUILDDIR)
+	gcc -o$@ $<
+
 $(BUILDDIR)/tester: ./src/sla_tester.c $(BUILDDIR)
 	gcc -o$@ $<
 
